--- a/test.ipynb
+++ b/test.ipynb
@@ -51,48 +51,48 @@
     }
    ],
    "source": [
-    "# Ширина трещины\n",
+    "# Gap width\n",
     "w = 1\n",
     "\n",
-    "# Вязкость проппанта\n",
+    "# Proppant viscosity\n",
     "mu0 = 1\n",
     "\n",
-    "# Максимальная концентрация проппанта\n",
+    "# Maximum proppant concentration\n",
     "cmax = 1\n",
     "\n",
-    "# Концентрация входящего проппанта\n",
+    "# Influent proppant concentration\n",
     "cin = 0.5\n",
     "\n",
-    "# Скорость входящего потока\n",
+    "# Incoming flow rate\n",
     "v_x_inlet = -0.025\n",
     "\n",
-    "# Поток смеси\n",
+    "# Mixture flow\n",
     "Q0 = -v_x_inlet*w\n",
     "\n",
-    "# Протяжённость проницаемого участка\n",
+    "# Length of permeable area\n",
     "chi = 0.4\n",
     "\n",
-    "# Ширина\n",
+    "# Width\n",
     "H = 1\n",
     "\n",
-    "# Длина\n",
+    "# Length\n",
     "L = 1\n",
     "\n",
-    "# Число случайно сгенерированных точек для НУ и ГУ\n",
+    "# Number of randomly generated points for IC and BC\n",
     "num_points = 32000 \n",
     "\n",
-    "# Границы для t,x,y\n",
+    "# Bounds for t,x,y\n",
     "x_min, x_max, y_min, y_max, t_min, t_max = 0, L, 0, H, 0, 10\n",
     "boundaries = [x_min, x_max, y_min, y_max, t_min, t_max]\n",
     "\n",
-    "# Координаты для НУ и ГУ\n",
+    "# Coordinates for IC and BC\n",
     "x_range, y_range, t_range = np.random.uniform(x_min, x_max, num_points), np.random.uniform(y_min, y_max, num_points), np.random.uniform(t_min, t_max, num_points)\n",
     "ranges = [x_range, y_range, t_range]\n",
     "\n",
-    "# Число случайно сгенерированных точек коллокации \n",
+    "# Number of collocation points\n",
     "collocation = 32\n",
     "\n",
-    "# Функция, описывающая распределение потока/смеси вдоль интервала перфорации\n",
+    "# Function describing the distribution of mixture flow along the perforation interval\n",
     "psi = np.where(np.abs(y_range - np.max(y_range) / 2) <= chi / 2, 1 / chi, 0)\n",
     "\n",
     "zeros = np.zeros(num_points)\n",
